--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title> Justin Andre - Design</title>
-    <link rel="icon" type="image/png" href="img/icon.ico">
+    <link rel="icon" type="image/png" href="img/main/icon.ico">
     <link rel="stylesheet" href="css/stylesheet.css">
   </head>
   <body>
