--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Justin Andre - Design</title>
-    <link rel="icon" type="image/png" href="img/main/icon.ico">
+    <title> Justin Andre&mdash;Design</title>
+    <link rel="icon" href="img/icon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/stylesheet.css">
   </head>
   <body>
 
-  </body>
+
 </html>
