deletes stylesheet and puts in master

--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <title> Justin Andre&mdash;Design</title>
     <link rel="icon" href="img/icon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
 
-<h1> Sorry Under Construction!</h1>
+<header>
+  <h1> JUSTIN VENERACION</h1>
+</header>
+
+<article>
+  <ul>
+    <li>Family App</li>
+    <li>Shopper App</li>
+    <li> Credit Suisse</li>
+  </ul>
+</article>
 
 
 </html>
