complete overhaul of the website

--- a/index.html
+++ b/index.html
@@ -9,17 +9,34 @@
   </head>
   <body>
 
-<header>
-  <h1> JUSTIN VENERACION</h1>
-</header>
+    <nav>
+      <a class="logo" href="justinandre.io">JUSTIN VENERACION</a>
+    <aside class="menu">
+      <a class="blog" href="#">blog</a>
+      <a class="blog" href="#">info</a>
+      </aside>
+    </nav>
+
+<content>
+
+<section class="info">
+<b>
+Justin is based in Toronto,Canada.
+He is an experienced designer and a recent graduate.</b>
+</section>
+
 
 <article>
   <ul>
-    <li>Family App</li>
-    <li>Shopper App</li>
-    <li> Credit Suisse</li>
+    <p>RECENT PROJECTS</p>
+    <li>01 &mdash; Family App</li>
+    <li>02 &mdash; Shopper App</li>
+    <li>03 &mdash; Credit Suisse</li>
   </ul>
 </article>
+</content>
 
+
+</body>
 
 </html>
