fixes home button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <nav>
-      <a class="logo" href="justinandre.io">JUSTIN VENERACION</a>
+      <a class="logo" href="index.html">JUSTIN VENERACION</a>
     <aside class="menu">
       <a class="blog" href="#">blog</a>
       <a class="blog" href="#">info</a>
