--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <section class="info">
 <b class="intro">
 Justin is based in Toronto,Canada.
-He is an experienced designer and a graduate at York / Sheridan Design.</b>
+He is an experienced designer and a graduate at York / Sheridan Design Program.</b>
 </section>
 
 
