adds css animate

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <title> Justin Andre&mdash;Design</title>
     <link rel="icon" href="img/icon.ico">
+      <link rel="stylesheet" href="css/animate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
 
-    <nav>
+    <nav class="aniamted fadeIn">
       <a class="logo" href="index.html">JUSTIN VENERACION</a>
     <aside class="menu">
       <a class="blog" href="#">blog</a>
@@ -19,14 +20,14 @@
 
 <content>
 
-<section class="info">
+<section class="info animated fadeIn">
 <b class="intro">
 Justin is based in Toronto,Canada.
 He is an experienced designer and a graduate at York / Sheridan Design Program.</b>
 </section>
 
 
-<article>
+<article class=" animated fadeIn">
   <ul>
     <p>RECENT PROJECTS</p>
     <li>01 &mdash; Family App</li>
@@ -39,4 +40,7 @@ He is an experienced designer and a graduate at York / Sheridan Design Program.<
 
 </body>
 
+
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
 </html>
