--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ He is an experienced designer and a graduate at York / Sheridan Design Program.<
 <article class=" animated fadeIn">
   <ul>
     <p>RECENT PROJECTS</p>
-    <li>01 &mdash; Family App</li>
-    <li>02 &mdash; Shopper App</li>
-    <li>03 &mdash; Credit Suisse</li>
+    <li><a class="projects" href="#">01 &mdash; Family App</a></li>
+    <li><a class="projects" href="#">02 &mdash; Shopper App</a></li>
+    <li><a class="projects" href="#">03 &mdash; Credit Suisse</a></li>
   </ul>
 </article>
 </content>
