adds strikeout to unfinished projects

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <nav class="aniamted fadeIn">
-      <a class="logo" href="index.html">JUSTIN VENERACION</a>
+      <a class="logo" href="index.html">JUSTIN ANDRE</a>
     <aside class="menu">
       <a class="blog" href="#">blog</a>
       <a class="blog" href="#">info</a>
@@ -23,7 +23,8 @@
 <section class="info animated fadeIn">
 <b class="intro">
 Justin is based in Toronto,Canada.
-He is an experienced designer and a graduate at York / Sheridan Design Program.</b>
+He is an experienced designer and a graduate at  York  / Sheridan  Design Program.</b>
+
 </section>
 
 
