--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <section class="info animated fadeIn">
 <b class="intro">
 Justin is based in Toronto,Canada.
-He is an experienced designer and a graduate at  York  / Sheridan  Design Program.</b>
+He is an experienced designer and a graduate from York  / Sheridan  Design Program.</b>
 
 </section>
 
