--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
   <body>
 
     <nav class="aniamted fadeIn">
-      <a class="logo" href="index.html">JUSTIN ANDRE</a>
+      <aside class="nav-left">
+         <a href="index.html">
+        <img src="img/logo-l.svg" class="logo-img" alt=""></img></a>
+        <a class="logo" href="index.html">JUSTIN ANDRE</a>
+      </aside>
+
     <aside class="menu">
       <a class="blog" href="#">blog</a>
       <a class="blog" href="#">info</a>
+      <a class="blog" href="#"> Projects</a>
       </aside>
     </nav>
 
