--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@ He is an experienced designer and a graduate from York  / Sheridan  Design Progr
 
 <article class=" animated fadeIn">
   <ul>
-    <p>RECENT PROJECTS</p>
-    <li><a class="projects" href="#">01 &mdash; Family App</a></li>
-    <li><a class="projects" href="#">02 &mdash; Shopper App</a></li>
-    <li><a class="projects" href="#">03 &mdash; Credit Suisse</a></li>
+    <p>Elsewhere</p>
+    <a class="projects" href="#">Instagram</a>,
+    <a class="projects" href="#">Dribbble</a>,
+    <a class="projects" href="#">LinkedIn</a>,
+    <a class="projects" href="#">Pintrest</a>
   </ul>
 </article>
 </content>
