--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,36 +2,41 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Design&mdash;Justin Andre</title>
+    <title> Projects&mdash;Justin Andre</title>
     <link rel="icon" href="img/icon.ico">
-      <link rel="stylesheet" href="css/animate.css">
+      <link rel="stylesheet" href="../css/animate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="../css/master.css">
   </head>
   <body>
 
     <nav class="aniamted fadeIn">
       <aside class="nav-left">
-         <a href="index.html">
-        <img src="img/logo-l.svg" class="logo-img" alt=""></img></a>
-        <a class="logo" href="index.html">JUSTIN ANDRE</a>
+         <a href="../../index.html">
+        <img src="../img/logo-l.svg" class="logo-img" alt=""></img></a>
+        <a class="logo" href="../../index.html">JUSTIN ANDRE</a>
       </aside>
 
     <aside class="menu">
       <a class="blog" href="#">info</a>
-      <a class="blog" href="pages/projects.html"> Projects</a>
+      <a class="blog" href="#"> Projects</a>
       </aside>
     </nav>
 
 <content>
 
-<section class="info animated fadeIn">
-<b class="intro">
-Justin is based in Toronto,Canada.
-He is an experienced designer and a graduate from York  / Sheridan  Design Program.</b>
 
-</section>
+<article class="animated fadeIn">
 
+  <ul>
+    <p>Recent Projects</p>
+  <li><a href="#"class="project-list" id="milya">01:Milya</a></li>
+  <li><a href="#" class="project-list">02:Swish</a></li>
+  <li><a href="#" class="project-list">03:Credit Suisse</a></li>
+  <li><a href="#" class="project-list">04:Moving Posters</a></li>
+
+  </ul>
+</article>
 
 <article class=" animated fadeIn">
   <ul>
@@ -44,6 +49,7 @@ He is an experienced designer and a graduate from York  / Sheridan  Design Progr
     <a class="elsewhere" href="#">Behance</a>
   </ul>
 </article>
+
 </content>
 
 
@@ -52,4 +58,5 @@ He is an experienced designer and a graduate from York  / Sheridan  Design Progr
 
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
+<script src="../js/hover.js"></script>
 </html>
