adds new transition and edits project page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ He is an experienced designer and a graduate from York  / Sheridan  Design Progr
 
 <article class=" animated fadeIn">
   <ul>
-    <p>Elsewhere</p>
+    <p>Elsewhere&mdash;</p>
     <a class="elsewhere" href="#">Instagram</a>,
     <a class="elsewhere" href="#">Dribbble</a>,
     <a class="elsewhere" href="#">LinkedIn</a>,
