--- a/pages/projects.html
+++ b/pages/projects.html
@@ -29,18 +29,18 @@
 <article class="animated fadeIn">
 
   <ul>
-    <p>Recent Projects</p>
-  <li><a href="#"class="project-list" id="milya">01:Milya</a></li>
-  <li><a href="#" class="project-list">02:Swish</a></li>
-  <li><a href="#" class="project-list">03:Credit Suisse</a></li>
-  <li><a href="#" class="project-list">04:Moving Posters</a></li>
+    <p>Recent Projects&mdash;</p>
+  <li><a href="#"class="project-list" id="milya">Milya</a></li>
+  <li><a href="#" class="project-list">Swish</a></li>
+  <li><a href="#" class="project-list">Credit Suisse</a></li>
+  <li><a href="#" class="project-list">Moving Posters</a></li>
 
   </ul>
 </article>
 
 <article class=" animated fadeIn">
   <ul>
-    <p>Elsewhere</p>
+    <p>Elsewhere&mdash;</p>
     <a class="elsewhere" href="#">Instagram</a>,
     <a class="elsewhere" href="#">Dribbble</a>,
     <a class="elsewhere" href="#">LinkedIn</a>,
