--- a/pages/projects.html
+++ b/pages/projects.html
@@ -26,11 +26,11 @@
 <content>
 
 
-<article class="animated fadeIn">
+<article class=" animated fadeIn">
 
   <ul>
     <p>Recent Projects&mdash;</p>
-  <li><a href="#"class="project-list" id="milya">Milya</a></li>
+  <li><a href="#" class="project-list">Milya</a></li>
   <li><a href="#" class="project-list">Swish</a></li>
   <li><a href="#" class="project-list">Credit Suisse</a></li>
   <li><a href="#" class="project-list">Moving Posters</a></li>
@@ -38,7 +38,7 @@
   </ul>
 </article>
 
-<article class=" animated fadeIn">
+<article class="animated fadeIn">
   <ul>
     <p>Elsewhere&mdash;</p>
     <a class="elsewhere" href="#">Instagram</a>,
