adds transition to elsewhere

--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@ He is an experienced designer <br> and a graduate  from York  / Sheridan  <br>De
 <article class=" animated fadeIn">
   <ul>
     <p>Elsewhere&mdash;</p>
-    <a class="elsewhere" href="#">Instagram</a>,
-    <a class="elsewhere" href="#">Dribbble</a>,
-    <a class="elsewhere" href="#">LinkedIn</a>,
-    <br>
-    <a class="elsewhere" href="#">Pintrest</a>,
-    <a class="elsewhere" href="#">Behance</a>
+    <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
+    <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
+    <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>,
+    <a class="elsewhere" href="https://www.pinterest.ca/venerisim/">Pintrest</a>,
   </ul>
 </article>
 </content>
