renames intro to info

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <content>
 
 <section class="info animated fadeIn">
-<b class="intro">
+<b class="info">
 Justin is based in Toronto,Canada.<br>
 He is an experienced designer <br> and a graduate  from York  / Sheridan  <br>Design Program.</b>
 
