updates project page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -26,17 +26,15 @@
 <content>
 
 
-<article class=" animated fadeIn">
-
-  <ul>
-    <p>Recent Projects&mdash;</p>
-  <li><a href="#" class="project-list">Milya</a></li>
-  <li><a href="#" class="project-list">Swish</a></li>
-  <li><a href="#" class="project-list">Credit Suisse</a></li>
-  <li><a href="#" class="project-list">Moving Posters</a></li>
+  <ul class="projects">
+    <li class="milya" ><a class="project-list" href="#">Milya</a></li>
+    <li class="swish"><a class="project-list"  href="#">Swish</a></li>
+    <li class="creditsuisse"><a class="project-list"  href="#">Credit Suisse</a></li>
+    <li class="posters"><a class="project-list"  href="#"> Moving Posters</a></li>
+    <li class="bg"></li>
 
   </ul>
-</article>
+
 
 <article class=" animated fadeIn">
   <ul>
