organizes pages + creates new pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <aside class="menu">
       <a class="blog" href="#">info</a>
-      <a class="blog" href="pages/projects.html"> Projects</a>
+      <a class="blog" href="projects.html"> Projects</a>
       </aside>
     </nav>
 
