--- a/projects.html
+++ b/projects.html
@@ -18,8 +18,8 @@
       </aside>
 
     <aside class="menu">
-      <a class="blog" href="#">info</a>
-      <a class="blog" href="#"> Projects</a>
+      <a class="blog" href="info.html">info</a>
+      <a class="blog" href="projects.html"> Projects</a>
       </aside>
     </nav>
 
