--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 <section class="info animated fadeIn">
 <b class="info">
-Justin is based in Toronto,Canada.<br>
-He is an experienced designer <br> and a graduate  from York  / Sheridan  <br>Design Program.</b>
+Justin is based in Toronto,Canada.
+He is an experienced designer and a graduate  from York  / Sheridan  Design Program.</b>
 
 </section>
 
