adds links to project links

--- a/projects.html
+++ b/projects.html
@@ -27,9 +27,9 @@
 
 
   <ul class="projects">
-    <li class="milya" ><a class="project-list" href="#">Milya</a></li>
-    <li class="swish"><a class="project-list"  href="#">Swish</a></li>
-    <li class="creditsuisse"><a class="project-list"  href="#">Credit Suisse</a></li>
+    <li class="milya" ><a class="project-list" href="projects/milya.html">Milya</a></li>
+    <li class="swish"><a class="project-list"  href="projects/swish.html">Swish</a></li>
+    <li class="creditsuisse"><a class="project-list"  href="projects/creditsuisse.html">Credit Suisse</a></li>
     <li class="posters"><a class="project-list"  href="#"> Moving Posters</a></li>
     <li class="bg"></li>
 
