Edits Projects Page

--- a/index.html
+++ b/index.html
@@ -10,30 +10,39 @@
   </head>
   <body>
 
-    <nav class="aniamted fadeIn">
-      <aside class="nav-left">
-         <a href="index.html">
-        <img src="img/logo-l.svg" class="logo-img" alt=""></img></a>
-        <a class="logo" href="index.html">JUSTIN ANDRE</a>
-      </aside>
-
-    <aside class="menu">
-      <a class="blog" href="info.html">info</a>
-      <a class="blog" href="projects.html"> Projects</a>
-      </aside>
-    </nav>
 
 <content>
+  <nav class="aniamted fadeIn">
+    <aside class="nav-left">
+       <a href="index.html">
+      <img src="img/logo-l.svg" class="logo-img" alt=""></img></a>
+      <a class="logo" href="index.html">JUSTIN ANDRE</a>
+    </aside>
+
+  <aside class="menu">
+    <a class="blog" href="info.html">info</a>
+    <a class="blog" href="projects.html"> Projects</a>
+    </aside>
+  </nav>
+
+
 
 <section class="info animated fadeIn">
 <b class="info">
-Justin is based in Toronto,Canada.
-He is an experienced designer and a graduate  from York  / Sheridan  Design Program.</b>
+Justin is based in Toronto, Canada. He is a recent graduate from York/Sheridan with professional experience in human centered design and front-end development.</b>
 
 </section>
 
 
-<article class=" animated fadeIn">
+<article class=" footer animated fadeIn">
+<aside class="footer-link">
+  <p>Contact&mdash;</p>
+  <a class="elsewhere" href="#">justin.veneracion11@gmail.com</a>
+</aside>
+
+<aside class="footer-link">
+
+
   <ul>
     <p>Elsewhere&mdash;</p>
     <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
@@ -41,6 +50,8 @@ He is an experienced designer and a graduate  from York  / Sheridan  Design Prog
     <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>,
     <a class="elsewhere" href="https://www.pinterest.ca/venerisim/">Pintrest</a>,
   </ul>
+</aside>
+
 </article>
 </content>
 
