--- a/projects.html
+++ b/projects.html
@@ -10,41 +10,76 @@
   </head>
   <body>
 
-    <nav class="aniamted fadeIn">
-      <aside class="nav-left">
-         <a href="../../index.html">
-        <img src="../img/logo-l.svg" class="logo-img" alt=""></img></a>
-        <a class="logo" href="../../index.html">JUSTIN ANDRE</a>
-      </aside>
-
-    <aside class="menu">
-      <a class="blog" href="info.html">info</a>
-      <a class="blog" href="projects.html"> Projects</a>
-      </aside>
-    </nav>
 
 <content>
+  <nav class="aniamted fadeIn">
+    <aside class="nav-left">
+       <a href="../../index.html">
+      <img src="../img/logo-l.svg" class="logo-img" alt=""></img></a>
+      <a class="logo" href="../../index.html">JUSTIN ANDRE</a>
+    </aside>
+
+  <aside class="menu">
+    <a class="blog" href="info.html">info</a>
+    <a class="blog" href="projects.html"> Projects</a>
+    </aside>
+  </nav>
 
 
-  <ul class="projects">
-    <li class="milya" ><a class="project-list" href="projects/milya.html">Milya</a></li>
-    <li class="swish"><a class="project-list"  href="projects/swish.html">Swish</a></li>
-    <li class="creditsuisse"><a class="project-list"  href="projects/creditsuisse.html">Credit Suisse</a></li>
-    <li class="posters"><a class="project-list"  href="#"> Moving Posters</a></li>
-    <li class="bg"></li>
-
-  </ul>
+<section class="grid animated fadeIn">
 
 
-<article class=" animated fadeIn">
-  <ul>
-    <p>Elsewhere&mdash;</p>
-    <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
-    <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
-    <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>,
-    <a class="elsewhere" href="https://www.pinterest.ca/venerisim/">Pintrest</a>,
-  </ul>
-</article>
+  <aside class="project">
+    <img src="../img/placeholder.png" alt="" >
+    <h2> Product Design</h2>
+    <p> Milya</p>
+    <caption> A Family Mobile App</caption>
+  </aside>
+
+  <aside class="project">
+    <img src="../img/placeholder.png" alt="" >
+    <h2> Product Design</h2>
+    <p> Swish</p>
+    <caption> A Universal Shopping Web & Mobile Application</caption>
+  </aside>
+
+  <aside class="project">
+    <img src="../img/placeholder.png" alt="">
+    <h2> User Experience</h2>
+    <p> Credit Suisse's Firefly</p>
+    <caption> Helping Students Sign Up</caption>
+  </aside>
+
+
+  <aside class="project">
+    <img src="../img/placeholder.png" alt="" >
+    <h2> Branding & Motion Design</h2>
+    <p> Moving Posters</p>
+    <caption> Series of Animated Posters about Self Branding</caption>
+  </aside>
+
+</section>
+
+
+  <article class=" footer animated fadeIn">
+  <aside class="footer-link">
+    <p>Contact&mdash;</p>
+    <a class="elsewhere" href="#">justin.veneracion11@gmail.com</a>
+  </aside>
+
+  <aside class="footer-link">
+
+
+    <ul>
+      <p>Elsewhere&mdash;</p>
+      <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
+      <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
+      <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>,
+      <a class="elsewhere" href="https://www.pinterest.ca/venerisim/">Pintrest</a>,
+    </ul>
+  </aside>
+
+  </article>
 
 </content>
 
