updates project page

--- a/projects.html
+++ b/projects.html
@@ -31,31 +31,40 @@
 
   <aside class="project">
     <img src="../img/placeholder.png" alt="" >
-    <h2> Product Design</h2>
-    <p> Milya</p>
-    <caption> A Family Mobile App</caption>
+    <article class="project-description">
+    <caption>Product Design&mdash;</caption>
+    <h2> Milya</h2>
+    <p> Reconnecting Overseas foreign Workers Families</p>
+  </article>
   </aside>
 
   <aside class="project">
     <img src="../img/placeholder.png" alt="" >
-    <h2> Product Design</h2>
-    <p> Swish</p>
-    <caption> A Universal Shopping Web & Mobile Application</caption>
+    <article class="project-description">
+    <caption>Product Design&mdash;</caption>
+    <h2> Swish</h2>
+    <p> A Better Online Shopping Experience</p>
+  </article>
   </aside>
 
   <aside class="project">
     <img src="../img/placeholder.png" alt="">
-    <h2> User Experience</h2>
-    <p> Credit Suisse's Firefly</p>
-    <caption> Helping Students Sign Up</caption>
+    <article class="project-description">
+      <caption> User Experience&mdash;</caption>
+      <h2> Credit Suisse's Firefly</h2>
+      <p> Helping Students Sign Up</p>
+    </article>
+
   </aside>
 
 
   <aside class="project">
     <img src="../img/placeholder.png" alt="" >
-    <h2> Branding & Motion Design</h2>
-    <p> Moving Posters</p>
-    <caption> Series of Animated Posters about Self Branding</caption>
+    <article class="project-description">
+    <caption>Branding & Motion Design&mdash;</caption>
+    <h2> Moving Posters</h2>
+    <p> Series of Animated Posters about Self Branding</p>
+  </article>
   </aside>
 
 </section>
