changes to project page

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,9 @@
 
 
   <aside class="project">
-    <img src="../img/placeholder.png" alt="" >
+
+<a href="#"><div class="project-image" id="swish-background"></div></a>
+
     <article class="project-description">
     <caption>Product Design&mdash;</caption>
     <h2> Milya</h2>
@@ -39,7 +41,8 @@
   </aside>
 
   <aside class="project">
-    <img src="../img/placeholder.png" alt="" >
+<a href="#"><div class="project-image" id="swish-background">
+    </div></a>
     <article class="project-description">
     <caption>Product Design&mdash;</caption>
     <h2> Swish</h2>
@@ -48,7 +51,9 @@
   </aside>
 
   <aside class="project">
-    <img src="../img/placeholder.png" alt="">
+<a href="#">
+    <div class="project-image" id="swish-background">
+    </div></a>
     <article class="project-description">
       <caption> User Experience&mdash;</caption>
       <h2> Credit Suisse's Firefly</h2>
@@ -59,7 +64,9 @@
 
 
   <aside class="project">
-    <img src="../img/placeholder.png" alt="" >
+    <a href="#"><div class="project-image" id="swish-background">
+
+    </div></a>
     <article class="project-description">
     <caption>Branding & Motion Design&mdash;</caption>
     <h2> Moving Posters</h2>
