--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,8 @@
       </aside>
 
     <aside class="menu">
-      <a class="blog" href="info.html">info</a>
-      <a class="blog" href="projects.html"> Projects</a>
+      <a class="blog" href="../info.html">info</a>
+      <a class="blog" href="../projects.html"> Projects</a>
       </aside>
     </nav>
 
@@ -33,7 +33,7 @@
 
   <aside class="project">
 
-<a href="#"><div class="project-image" id="swish-background"></div></a>
+<a href="../projects/milya.html"><div class="project-image" id="swish-background"></div></a>
 
     <article class="project-description">
     <caption>Product Design&mdash;</caption>
@@ -43,7 +43,7 @@
   </aside>
 
   <aside class="project">
-<a href="#"><div class="project-image" id="swish-background">
+<a href="../projects/swish.html"><div class="project-image" id="swish-background">
     </div></a>
     <article class="project-description">
     <caption>Product Design&mdash;</caption>
@@ -53,7 +53,7 @@
   </aside>
 
   <aside class="project">
-<a href="#">
+<a href="../projects/creditsuisse.html">
     <div class="project-image" id="swish-background">
     </div></a>
     <article class="project-description">
@@ -66,7 +66,7 @@
 
 
   <aside class="project">
-    <a href="#"><div class="project-image" id="swish-background">
+    <a href="../projects/movingposters.html"><div class="project-image" id="swish-background">
 
     </div></a>
     <article class="project-description">
@@ -92,8 +92,8 @@
       <p>Elsewhere&mdash;</p>
       <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
       <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
-      <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>,
-      <a class="elsewhere" href="https://www.pinterest.ca/venerisim/">Pintrest</a>,
+      <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>
+
     </ul>
   </aside>
 
