--- a/projects/movingposters.html
+++ b/projects/movingposters.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Credit Suisse&mdash;Justin Andre</title>
+    <title> Moving Posters&mdash;Justin Andre</title>
     <link rel="icon" href="../img/icon.ico">
       <link rel="stylesheet" href="../css/animate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
