--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <section class="info animated fadeIn">
 <b class="info">
-Justin is based in Toronto, Canada. He is a recent graduate from York/Sheridan with professional experience in human centered design and front-end development.</b>
+Justin is based in Toronto, Canada. He is a recent graduate from York/Sheridan with professional experience in human centered design and a bit front-end development.</b>
 
 </section>
 
