--- a/info.html
+++ b/info.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <nav class="aniamted fadeIn">
+    <nav class="aniamted fadeInUp">
       <aside class="nav-left">
          <a href="index.html">
         <img src="img/logo-l.svg" class="logo-img" alt=""></img></a>
