--- a/projects/swish.html
+++ b/projects/swish.html
@@ -26,6 +26,9 @@
 
 <content>
 
+<section class="swish-grid">
+  test
+</section>
 
 
   <article class=" footer animated fadeIn">
@@ -56,5 +59,5 @@
 
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
-<script src="../js/hover.js"></script>
+<script src="../js/script.js"></script>
 </html>
