edits project page

--- a/projects.html
+++ b/projects.html
@@ -33,12 +33,12 @@
 
   <aside class="project">
 
-<a href="../projects/milya.html"><div class="project-image" id="swish-background"> </div></a>
+<a href="../projects/milya.html"><div class="project-image" id="milya-background"> </div></a>
 
     <article class="project-description">
     <caption>Product Design&mdash;</caption>
     <h2> Milya</h2>
-    <p> Reconnecting Overseas foreign Workers Families</p>
+    <p> Reconnecting OFW Families</p>
   </article>
   </aside>
 
@@ -54,7 +54,7 @@
 
   <aside class="project">
 <a href="../projects/creditsuisse.html">
-    <div class="project-image" id="swish-background">
+    <div class="project-image" id="creditsuisse-background">
     </div></a>
     <article class="project-description">
       <caption> User Experience&mdash;</caption>
@@ -66,7 +66,7 @@
 
 
   <aside class="project">
-    <a href="../projects/movingposters.html"><div class="project-image" id="swish-background">
+    <a href="../projects/movingposters.html"><div class="project-image" id="movingposters-background">
 
     </div></a>
     <article class="project-description">
@@ -107,5 +107,5 @@
 
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
-<script src="../js/hover.js"></script>
+<script src="../js/script.js"></script>
 </html>
