--- a/projects/swish.html
+++ b/projects/swish.html
@@ -7,8 +7,6 @@
       <link rel="stylesheet" href="../css/animate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/master.css">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
-
   </head>
   <body>
 
@@ -28,9 +26,6 @@
 
 <content>
 
-<section class="swish-grid">
-  test
-</section>
 
 
   <article class=" footer animated fadeIn">
@@ -59,11 +54,10 @@
 <img src="../img/arrow.svg" alt="arrow">
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
-<script src="../js/script.js"></script>
 </body>
 
 
-
-
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
+<script src="../js/hover.js"></script>
 </html>
