--- a/projects/creditsuisse.html
+++ b/projects/creditsuisse.html
@@ -10,14 +10,13 @@
   </head>
   <body>
 
-
     <nav class="aniamted fadeIn">
       <aside class="nav-left">
-         <a href="../../index.html">
+         <a href="/">
         <img src="../img/logo-l.svg" class="logo-img" alt=""></img></a>
-        <a class="logo" href="../../index.html">JUSTIN ANDRE</a>
+        <a class="logo" href="/">JUSTIN ANDRE</a>
       </aside>
-
+      
     <aside class="menu">
       <a class="blog" href="../info.html">info</a>
       <a class="blog" href="../projects.html"> Projects</a>
