--- a/projects/swish.html
+++ b/projects/swish.html
@@ -13,9 +13,9 @@
 
     <nav class="aniamted fadeIn">
       <aside class="nav-left">
-         <a href="../../index.html">
+         <a href="/">
         <img src="../img/logo-l.svg" class="logo-img" alt=""></img></a>
-        <a class="logo" href="../../index.html">JUSTIN ANDRE</a>
+        <a class="logo" href="/">JUSTIN ANDRE</a>
       </aside>
 
     <aside class="menu">
