--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
 
 
 <section class="info animated fadeIn">
+
+<blockquote class="attention">
+
+Website is currently under construction!
+
+</blockquote>
+
 <b class="info">
 Justin is a designer based in Toronto, Canada. He is a recent graduate from York/Sheridan with professional experience in human centered design and a bit front-end development.</b>
 
