--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="../css/animate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/master.css">
+    <script type="text/javascript" src="../js/script.js"></script>
   </head>
   <body>
 
@@ -108,4 +109,6 @@
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
 <script src="../js/script.js"></script>
+
+
 </html>
