changes moving posters

--- a/projects/swish.html
+++ b/projects/swish.html
@@ -26,7 +26,9 @@
 
 <content>
 
+<section class="container">
 
+</section>
 
   <article class=" footer animated fadeIn">
   <aside class="footer-link">
