--- a/index.html
+++ b/index.html
@@ -30,31 +30,35 @@
 <section class="info animated fadeIn">
 
 <blockquote class="attention">
-
 Website is currently under construction!
-
 </blockquote>
 
-<b class="info">
-Justin is a designer based in Toronto, Canada. He is a recent graduate from York/Sheridan with professional experience in human centered design and a bit front-end development.</b>
+<h1>Justin is a designer based in Toronto, Canada.
+  He is a recent graduate from York/Sheridan with professional experience in human centered design and a bit front-end development.</h1>
 
 </section>
 
 
 <article class=" footer animated fadeIn">
 <aside class="footer-link">
-  <p>Contact&mdash;</p>
+  <ul>
+
+  <caption>Contact&mdash;</caption>
+  <br>
   <a class="elsewhere" href="#">justin.veneracion11@gmail.com</a>
+  </ul>
 </aside>
 
 <aside class="footer-link">
 
 
   <ul>
-    <p>Elsewhere&mdash;</p>
+    <caption>Elsewhere&mdash;</caption>
+    <br>
     <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
     <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
     <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>
+
   </ul>
 </aside>
 
