--- a/info.html
+++ b/info.html
@@ -27,24 +27,30 @@
 
 
 
-<article class=" footer animated fadeIn">
-<aside class="footer-link">
-  <p>Contact&mdash;</p>
-  <a class="elsewhere" href="#">justin.veneracion11@gmail.com</a>
-</aside>
+  <article class=" footer animated fadeIn">
+  <aside class="footer-link">
+    <ul>
 
-<aside class="footer-link">
+    <caption>Contact&mdash;</caption>
+    <br>
+    <a class="elsewhere" href="#">justin.veneracion11@gmail.com</a>
+    </ul>
+  </aside>
+
+  <aside class="footer-link">
 
 
-  <ul>
-    <p>Elsewhere&mdash;</p>
-    <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
-    <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
-    <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>
-  </ul>
-</aside>
+    <ul>
+      <caption>Elsewhere&mdash;</caption>
+      <br>
+      <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
+      <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
+      <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>
 
-</article>
+    </ul>
+  </aside>
+
+  </article>
 </content>
 
 
