--- a/projects/swish.html
+++ b/projects/swish.html
@@ -26,29 +26,31 @@
 
 <content>
 
-<section class="container">
 
-</section>
+<article class=" footer animated fadeIn">
+<aside class="footer-link">
+  <ul>
 
-  <article class=" footer animated fadeIn">
-  <aside class="footer-link">
-    <p>Contact&mdash;</p>
-    <a class="elsewhere" href="#">justin.veneracion11@gmail.com</a>
-  </aside>
+  <caption>Contact&mdash;</caption>
+  <br>
+  <a class="elsewhere" href="#">justin.veneracion11@gmail.com</a>
+  </ul>
+</aside>
 
-  <aside class="footer-link">
+<aside class="footer-link">
 
 
-    <ul>
-      <p>Elsewhere&mdash;</p>
-      <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
-      <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
-      <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>
+  <ul>
+    <caption>Elsewhere&mdash;</caption>
+    <br>
+    <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
+    <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
+    <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>
 
-    </ul>
-  </aside>
+  </ul>
+</aside>
 
-  </article>
+</article>
 
 </content>
 
