--- a/projects/creditsuisse.html
+++ b/projects/creditsuisse.html
@@ -16,7 +16,7 @@
         <img src="../img/logo-l.svg" class="logo-img" alt=""></img></a>
         <a class="logo" href="/">JUSTIN ANDRE</a>
       </aside>
-      
+
     <aside class="menu">
       <a class="blog" href="../info.html">info</a>
       <a class="blog" href="../projects.html"> Projects</a>
@@ -35,13 +35,20 @@
 
   <article class=" footer animated fadeIn">
   <aside class="footer-link">
-    <p>Contact&mdash;</p>
+    <ul>
+
+    <caption>Contact&mdash;</caption>
+    <br>
     <a class="elsewhere" href="#">justin.veneracion11@gmail.com</a>
+    </ul>
   </aside>
 
   <aside class="footer-link">
+
+
     <ul>
-      <p>Elsewhere&mdash;</p>
+      <caption>Elsewhere&mdash;</caption>
+      <br>
       <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
       <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
       <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>
