--- a/projects/movingposters.html
+++ b/projects/movingposters.html
@@ -30,15 +30,20 @@
 
   <article class=" footer animated fadeIn">
   <aside class="footer-link">
-    <p>Contact&mdash;</p>
+    <ul>
+
+    <caption>Contact&mdash;</caption>
+    <br>
     <a class="elsewhere" href="#">justin.veneracion11@gmail.com</a>
+    </ul>
   </aside>
 
   <aside class="footer-link">
 
 
     <ul>
-      <p>Elsewhere&mdash;</p>
+      <caption>Elsewhere&mdash;</caption>
+      <br>
       <a class="elsewhere" href="https://www.instagram.com/venerism/">Instagram</a>,
       <a class="elsewhere" href="https://dribbble.com/venerism">Dribbble</a>,
       <a class="elsewhere" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LinkedIn</a>
