Change Project to CSS GRID

--- a/projects.html
+++ b/projects.html
@@ -1,84 +1,70 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> Projects&mdash;Justin Andre</title>
-    <link rel="icon" href="../img/icon.ico">
-      <link rel="stylesheet" href="../css/animate.css">
+    <title>Project Page for Portfolio</title>
+    <link rel="stylesheet" href="/css/master.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/master.css">
-    <script type="text/javascript" src="../js/script.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
 
-
     <nav class="aniamted fadeIn">
       <aside class="nav-left">
-         <a href="/">
-        <img src="../img/logo-l.svg" class="logo-img" alt=""></img></a>
-        <a class="logo" href="/">JUSTIN ANDRE</a>
+         <a href="index.html">
+        <img src="img/logo-l.svg" class="logo-img" alt=""></img></a>
+        <a class="logo" href="index.html">JUSTIN ANDRE</a>
       </aside>
 
     <aside class="menu">
-      <a class="blog" href="../info.html">info</a>
-      <a class="blog" href="../projects.html"> Projects</a>
+      <a class="blog" href="info.html">info</a>
+      <a class="blog" href="projects.html"> Projects</a>
       </aside>
     </nav>
 
-<content>
-
-
-
-<section class="grid animated fadeIn">
-
-
-  <aside class="project">
-
-<a href="../projects/milya.html"><div class="project-image" id="milya-background"> </div></a>
-
-    <article class="project-description">
-    <caption>Product Design&mdash;</caption>
+<section class="project-grid">
+<box class="project-box">
+  <aside class="project-image" id="milya-background"></aside>
+  <article class="project-info">
+    <caption>Product Design—</caption>
     <h2> Milya</h2>
-    <p> Reconnecting OFW Families</p>
+    <p> Connecting OFW Families</p>
   </article>
-  </aside>
-
-  <aside class="project">
-<a href="../projects/swish.html"><div class="project-image" id="swish-background">
-    </div></a>
-    <article class="project-description">
-    <caption>Product Design&mdash;</caption>
+</box>
+<box class="project-box">
+  <aside class="project-image" ></aside>
+  <article class="project-info">
+    <caption> Product Design—</caption>
     <h2> Swish</h2>
-    <p> A Better Online Shopping Experience</p>
+    <p>Redefining Online Shopping Experience</p>
   </article>
-  </aside>
-
-  <aside class="project">
-<a href="../projects/creditsuisse.html">
-    <div class="project-image" id="creditsuisse-background">
-    </div></a>
-    <article class="project-description">
-      <caption> User Experience&mdash;</caption>
-      <h2> Credit Suisse's Firefly</h2>
-      <p> Helping Students Sign Up</p>
-    </article>
-
-  </aside>
-
-
-  <aside class="project">
-    <a href="../projects/movingposters.html"><div class="project-image" id="movingposters-background">
-
-    </div></a>
-    <article class="project-description">
-    <caption>Branding & Motion Design&mdash;</caption>
+</box>
+<box class="project-box">
+  <aside class="project-image"></aside>
+  <article class="project-info">
+    <caption>User Experience—</caption>
+  <h2>  Credit Suisse' Firefly</h2>
+  <p> Reshaping an exisiting sign up flow</p>
+  </article>
+</box>
+<box class="project-box">
+  <aside class="project-image"></aside>
+  <article class="project-info">
+    <caption> Motion Design—</caption>
     <h2> Moving Posters</h2>
-    <p> Series of Animated Posters about Self Branding</p>
+    <p>Series of Branding Identity</p>
   </article>
-  </aside>
-
+</box>
+<box class="project-box">
+  <aside class="project-image"></aside>
+  <article class="project-info">
+    <caption>Illustrations—</caption>
+    <h2>Illustration Collection</h2>
+    <p>A collection of various illustrations</p>
+  </article>
+</box>
 </section>
-
 
 <article class=" footer animated fadeIn">
 <aside class="footer-link">
@@ -104,16 +90,5 @@
 </aside>
 
 </article>
-
-</content>
-
-
 </body>
-
-
-<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
-<script src="../js/script.js"></script>
-
-
 </html>
