Changes to Project and master

--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Project Page for Portfolio</title>
     <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="/css/animate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/js/script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -23,7 +24,7 @@
       </aside>
     </nav>
 
-<section class="project-grid">
+<section class="project-grid animated fadeIn">
 <box class="project-box">
   <aside class="project-image" id="milya-background"></aside>
   <article class="project-info">
@@ -32,7 +33,7 @@
     <p> Connecting OFW Families</p>
   </article>
 </box>
-<box class="project-box">
+<box class="project-box animated fadeIn">
   <aside class="project-image" ></aside>
   <article class="project-info">
     <caption> Product Design—</caption>
@@ -40,7 +41,7 @@
     <p>Redefining Online Shopping Experience</p>
   </article>
 </box>
-<box class="project-box">
+<box class="project-box animated fadeIn">
   <aside class="project-image"></aside>
   <article class="project-info">
     <caption>User Experience—</caption>
@@ -48,7 +49,7 @@
   <p> Reshaping an exisiting sign up flow</p>
   </article>
 </box>
-<box class="project-box">
+<box class="project-box animated fadeIn">
   <aside class="project-image"></aside>
   <article class="project-info">
     <caption> Motion Design—</caption>
@@ -56,7 +57,7 @@
     <p>Series of Branding Identity</p>
   </article>
 </box>
-<box class="project-box">
+<box class="project-box animated fadeIn">
   <aside class="project-image"></aside>
   <article class="project-info">
     <caption>Illustrations—</caption>
