fixes title and icon

--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Project Page for Portfolio</title>
+    <title>Projects&mdash;Justin Andre</title>
+    <link rel="icon" href="img/icon.ico">
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/animate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
