--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
   </article>
 </box>
 <box class="project-box animated fadeIn">
-  <aside class="project-image" ></aside>
+  <aside class="project-image" id="swish-background"></aside>
   <article class="project-info">
     <caption> Product Design—</caption>
     <h2> Swish</h2>
@@ -51,7 +51,7 @@
   </article>
 </box>
 <box class="project-box animated fadeIn">
-  <aside class="project-image"></aside>
+  <aside class="project-image" id="movingposters-background"></aside>
   <article class="project-info">
     <caption> Motion Design—</caption>
     <h2> Moving Posters</h2>
@@ -59,10 +59,10 @@
   </article>
 </box>
 <box class="project-box animated fadeIn">
-  <aside class="project-image"></aside>
+  <aside class="project-image" id="illustrations-background"></aside>
   <article class="project-info">
-    <caption>Illustrations—</caption>
-    <h2>Illustration Collection</h2>
+    <caption>Illustration—</caption>
+    <h2>Collection of Illustrations</h2>
     <p>A collection of various illustrations</p>
   </article>
 </box>
