--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
   <article class="project-info">
     <caption>Illustration—</caption>
     <h2>Collection of Illustrations</h2>
-    <p>A collection of various illustrations</p>
+    <p>Illustrations throughout the years</p>
   </article>
 </box>
 </section>
