--- a/projects.html
+++ b/projects.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/animate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
 
-    <nav class="aniamted fadeIn">
+    <nav class="aniamted fadeIn" id="navbar">
       <aside class="nav-left">
          <a href="index.html">
         <img src="img/logo-l.svg" class="logo-img" alt=""></img></a>
