changes to projects page

--- a/projects.html
+++ b/projects.html
@@ -42,14 +42,16 @@
     <p>Redefining Online Shopping Experience</p>
   </article>
 </box>
-<box class="project-box animated fadeIn">
+
+<!--<box class="project-box animated fadeIn">
   <aside class="project-image"></aside>
   <article class="project-info">
     <caption>User Experience—</caption>
   <h2>  Credit Suisse' Firefly</h2>
   <p> Reshaping an exisiting sign up flow</p>
   </article>
-</box>
+</box> -->
+
 <box class="project-box animated fadeIn">
   <aside class="project-image" id="movingposters-background"></aside>
   <article class="project-info">
