adds illustrations page

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,8 @@
   </article>
 </box>
 <box class="project-box animated fadeIn">
-  <aside class="project-image" id="illustrations-background"></aside>
+  <a href="../projects/illustrations.html">
+  <aside class="project-image" id="illustrations-background"></aside></a>
   <article class="project-info">
     <caption>Illustration—</caption>
     <h2>Collection of Illustrations</h2>
