fixes links on illustrations html

--- a/projects/illustrations.html
+++ b/projects/illustrations.html
@@ -14,13 +14,13 @@
 
     <nav class="aniamted fadeIn" id="navbar">
       <aside class="nav-left">
-         <a href="index.html">
+         <a href="../index.html">
         <img src="../img/logo-l.svg" class="logo-img" alt=""></img></a>
         <a class="logo" href="../index.html">JUSTIN ANDRE</a>
       </aside>
 
     <aside class="menu">
-      <a class="blog" href="info.html">info</a>
+      <a class="blog" href="../info.html">info</a>
       <a class="blog" href="../projects.html"> Projects</a>
       </aside>
     </nav>
