--- a/projects/illustrations.html
+++ b/projects/illustrations.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Projects&mdash;Justin Andre</title>
-    <link rel="icon" href="img/icon.ico">
+    <link rel="icon" href="../img/icon.ico">
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/animate.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
